# smartclaw

./: .coderabbit.yaml  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  AUTO_START_GUIDE.md  BACKUP_AND_RESTORE.md  LICENSE  Makefile  README.md  README_SMARTCLAW.md  SETUP.md  SLACK_SETUP_GUIDE.md  SOUL.md  TOOLS.md  agent-orchestrator.yaml  doctor.sh  enqueue-symphony-tasks.sh  health-check.sh  install.sh  mem0.json  monitor-agent.sh  openclaw.json  pyproject.toml  run-scheduled-job.sh  startup-check.sh
.beads/: config.yaml  issues.jsonl
.claude/: metadata-updater.sh  settings.json
docs/: AO_EXHAUSTIVE_AUDIT_FINDINGS.md  CRON_MIGRATION.html  CRON_MIGRATION.md  GENESIS_DESIGN.md  HARNESS_ENGINEERING.md  HUMAN_CHANNEL_BRIDGE.html  HUMAN_CHANNEL_BRIDGE.md  INCIDENT_OPENCLAW_2026328_WS_STREAM.html  INCIDENT_OPENCLAW_2026328_WS_STREAM.md  OPENCLAW_CONTEXT_WINDOW_COMPARISON.md  ORCHESTRATION_RESEARCH_2026.md  ORCHESTRATION_SYSTEM_DESIGN.html  ORCHESTRATION_SYSTEM_DESIGN.md  POSTMORTEM_2026-03-19_SMARTCLAW_ROUTING.md  SMARTCLAW_PORTABILITY_AUDIT.html  SMARTCLAW_PORTABILITY_AUDIT.md  STAGING_PIPELINE.html  STAGING_PIPELINE.md  SWITCH_TO_HERMES.html  SWITCH_TO_HERMES.md  ZERO_TOUCH.md  ZOE_AGENT_SWARM_REFERENCE.md  coderabbit-ping-workflow.md  dropped-messages-audit-2026-04-04.md  gateway-reference.md  mem0-purge-runbook.html  mem0-purge-runbook.md  openclaw-backup-jobs.md  openclaw-dev-pipeline.md  openclaw-docker-staging-setup.md  openclaw-first-time-setup.md  openclaw-node-version-management.md  openclaw-setup.md  openclaw-staging-setup.md  operational-runbook.md  (+6 more)
(+563 files in other folders)
